<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_cont"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/home_appbar"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="5dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <android.support.v4.view.ViewPager

                        android:id="@+id/home_carousal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="bottom"
                        android:clipToPadding="false"
                        android:overScrollMode="never" />

                    <android.support.design.widget.TabLayout
                        android:id="@+id/dot_carousel"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="10dp"
                        android:paddingBottom="10dp"
                        app:tabBackground="@drawable/tab_selector"
                        app:tabGravity="center"
                        app:tabIndicatorHeight="0dp"
                        app:tabPaddingEnd="6dp"
                        app:tabPaddingStart="6dp" />
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="270dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/new_arrival_bg" />

                    <RelativeLayout
                        android:id="@+id/head"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/gride_head_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="20dp"
                            android:text="@string/new_arrivals"
                            android:textAllCaps="true"
                            android:textColor="@android:color/black" />

                        <Button
                            android:id="@+id/newarrival_view_all"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="20dp"
                            android:text="View All"
                            android:textColor="@color/colorAccent" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_below="@+id/head">

                        <android.support.v7.widget.RecyclerView
                            android:layout_marginBottom="5dp"
                            android:id="@+id/new_products_grid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:nestedScrollingEnabled="false"
                            android:paddingStart="60dp"
                            android:scrollbars="none" />
                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <include layout="@layout/basedon_activities" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="270dp"
                        android:background="@drawable/new_arrival_bg"
                        android:scaleType="centerCrop" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/gride_head_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="20dp"
                            android:text="@string/best_offers"
                            android:textAllCaps="true"
                            android:textColor="@android:color/black" />

                        <Button
                            android:id="@+id/best_offers"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="20dp"
                            android:text="View All"
                            android:textColor="@color/colorAccent" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/offers_gride"
                            android:layout_marginBottom="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:nestedScrollingEnabled="false"
                            android:paddingStart="60dp"
                            android:scrollbars="none" />
                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <include layout="@layout/basedon_activity2" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardElevation="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="270dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/new_arrival_bg" />

                    <RelativeLayout
                        android:id="@+id/head_cont3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:id="@+id/gride_head_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="20dp"
                            android:text="@string/featured_products"
                            android:textAllCaps="true"
                            android:textColor="@android:color/black" />

                        <Button
                            android:id="@+id/featured"
                            style="?android:attr/borderlessButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="20dp"
                            android:text="View All"
                            android:textColor="@color/colorAccent" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_alignParentBottom="true">

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/featured_gride"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:nestedScrollingEnabled="false"
                            android:paddingStart="60dp"
                            android:scrollbars="none" />
                    </RelativeLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <include layout="@layout/recently_viewed" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/noconnection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/noconnection" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Oh no!"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/looks_like_you_are_not_connected_to_the_internet"
                android:textStyle="bold" />

            <Button
                android:id="@+id/reconnect"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/reconnect_button_style"
                android:text="@string/reconnect"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminateTint="@color/colorAccent" />
    </LinearLayout>
</RelativeLayout>